--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -1,5 +1,7 @@
-services: #servicios que se van a ejecutar
- app-csv: #nombre del servicio
-  build: #construir la imagen
-   context: . #contexto de la imagen o la carpeta donde se encuentra el dockerfile
-   dockerfile: Dockerfile #archivo dockerfile
+services:
+ app-csv:
+  build: 
+   context: . 
+   dockerfile: Dockerfile 
+  volumes: 
+    - .:/app 
